javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/InstanceOf.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

import java.lang.Integer;
import java.lang.Object;

public class InstanceOf {

  public void testInstanceOf(){
    Integer integer;

    if(integer instanceof Object) {

    }

  }
}
